# self-corrective-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_ko.md  REFACTORING.md  arxiv-metadata.txt  pyproject.toml
.claude/: CLAUDE.md
agentic_rag/config/: __init__.py  loader.py  prompts.py  settings.py
agentic_rag/evaluation/: __init__.py  human_eval.py  metrics.py
agentic_rag/optimization/: __init__.py  bootstrap.py  collector.py  mipro.py
agentic_rag/pipeline/: __init__.py  _mixin.py  agentic.py  base.py  crag.py  loop.py  manual.py  naive.py  rlm_tools.py  self_corrective.py
agentic_rag/retriever/: __init__.py  dense.py  hybrid.py  indexer.py  section_index.py  sparse.py  term_index.py
agentic_rag/signatures/: __init__.py  agent.py  decompose.py  evaluate.py  generate.py  preprocess.py  rlm_refinement.py
agentic_rag/tools/: __init__.py  calculate.py  decompose.py  evaluate.py  inspect.py  search.py  structure.py  terminology.py
assets/: build_figures.sh
config/: settings.py
configs/: base.yaml
configs/ablation/: 1d_evaluation.yaml  full.yaml  manual_prompt.yaml  wo_evaluate_tool.yaml  wo_rlm.yaml  wo_search.yaml  wo_section_index.yaml  wo_term_index.yaml
configs/experiment/: rq1.yaml  rq2.yaml  rq3.yaml  rq4.yaml  rq5.yaml  rq5_smoke.yaml  synergy_loop_manual.yaml
configs/pipeline/: agentic.yaml  crag.yaml  loop.yaml  naive.yaml
data/results/: RESULTS_SUMMARY.md
docs/: FINANCEBENCH_ANALYSIS.md  KBS_GUIDELINES.md  PAPER_PLAN.md  Q1_READINESS_ASSESSMENT.md
experiments/: common.py  run.py  run_ablation.py  run_all.py  run_rq1.py  run_rq2.py  run_rq3.py  run_rq4.py  run_rq5.py
experiments/analysis/: __init__.py  mediation.py  (+5 more)
notebooks/: case_study.ipynb  data_analysis.ipynb
paper/: main.tex  references.bib
paper-review/: 2026-03-26-kbs-review.md  2026-03-27-final-review.md
scripts/: build_index.py  prepare_datasets.py  run_bootstrap_ci.py  run_llm_judge.py
tests/: conftest.py  test_agent.py  test_config_loader.py  test_pipeline.py  test_retriever.py  test_rlm_refinement.py  test_signatures.py
(+49 files in other folders)
